--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
         <button id="submitBtn" class="btn btn-primary" style="width: 100%; font-size: 1.3rem; margin-top: 30px; padding: 16px;">إرسال الطلب ✅</button>
 
         <div class="support-box">
-            <p style="margin-top:0; font-weight:bold; color:var(--primary);">الدعم الفني والبرمجي:</p>
+            <p style="margin-top:0; font-weight:bold; color:var(--primary);">الدعم الفني:</p>
             <div style="display:flex; justify-content:center; gap:12px; flex-wrap:wrap;">
-                <a href="https://wa.me/201021102607" target="_blank" class="btn btn-wa">💬 م/ مهند (واتساب)</a>
-                <a href="tel:01021102607" class="btn btn-wa" style="background:#3498db;">📞 م/ مهند (اتصال)</a>
+                <a href="https://wa.me/201021102607" target="_blank" class="btn btn-wa">💬للتواصل/ (واتساب)</a>
+                <a href="tel:01021102607" class="btn btn-wa" style="background:#3498db;">📞للتوصال (اتصال)</a>
             </div>
         </div>
     </div>
@@ -366,7 +366,7 @@
 </div>
 
 <footer class="engineer-footer">
-    🚀 تم التطوير بواسطة <b>المهندس مهند إيهاب التهامي</b> 🛡️ خبير أنظمة أمنية وتطوير برمجيات 📱 01021102607
+  
 </footer>
 
 <script>
