--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@ let userRole = "";
 let currentEditId = "";
 
 // ⚙️ إعدادات Cloudinary
-const CLOUDINARY_CLOUD_NAME = "YOUR_CLOUD_NAME"; // ضع Cloud Name بتاعك
-const CLOUDINARY_UPLOAD_PRESET = "YOUR_UPLOAD_PRESET"; // ضع Upload Preset بتاعك
+const CLOUDINARY_CLOUD_NAME = "dg3u3f22n";
+const CLOUDINARY_UPLOAD_PRESET = "WORKSAQR";
 
 const formatDateTime = (ts) => {
 if (!ts) return "-";
